--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -1,3 +1,11 @@
+body {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: auto 900px auto;
+  grid-template-areas: ". leaderboard .";
+  align-content: center;
+}
+
 .grid {
   display: grid;
   grid-auto-flow: column;
