--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -74,6 +74,7 @@ $border-radius: 4px;
 
 $box-shadow: 0 1px 2px rgba(0,0,0,0.1);
 $dark-box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+$soft-box-shadow: 0 20px 50px -20px rgba(0,0,0,0.5);
 
 $text-highlight: 0 1px 0 #fff;
 $text-shadow: 0 1px 0 rgba(0,0,0,0.1);
