--- a/src/styles/components/_leaderboard.scss
+++ b/src/styles/components/_leaderboard.scss
@@ -24,5 +24,61 @@
 
 .leaderboard {
   @extend %panel;
+  border: none;
+  box-shadow: $soft-box-shadow;
+  overflow: hidden;
+}
+
+.leaderboard__total {
   padding: $padding;
+  font: $h2;
+  text-align: center;
+  color: $lighter-gray;
+  background-color: $lb-blue;
+  // border-radius: $border-radius 0 0 $border-radius;
+}
+
+.leaderboard__progress-bar {
+  display: grid;
+  align-items: end;
+  width: 30px;
+  height: 400px;
+  margin: $padding auto;
+  padding: 5px;
+  background-color: $lb-navy;
+  border-radius: 15px;
+}
+
+.leaderboard__progress-bar-inner {
+  height: 50%;
+  background-color: $lb-yellow;
+  border-radius: 10px;
+}
+
+.leaderboard__teams {
+  display: grid;
+  grid-auto-rows: 1fr;
+  border: $border;
+  border-left: none;
+}
+
+.leaderboard__team {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
+  padding: $padding;
+  font: $h3;
+
+  & + & {
+    border-top: $border;
+  }
+
+  &:first-of-type {
+    font: $h2;
+  }
+}
+
+.leaderboard__team-title-icon {
+  color: $lb-yellow;
 }
