Refactor layout, type adjustments

--- a/src/styles/layout/_grid.scss
+++ b/src/styles/layout/_grid.scss
@@ -2,8 +2,12 @@ body {
   height: 100vh;
   display: grid;
   grid-template-columns: auto 900px auto;
-  grid-template-areas: ". leaderboard .";
+  grid-template-areas: ". main .";
   align-content: center;
+}
+
+main {
+  grid-area: main;
 }
 
 .grid {
