--- a/src/styles/components/_leaderboard.scss
+++ b/src/styles/components/_leaderboard.scss
@@ -3,7 +3,6 @@
 // ---------------------------------- \\
 
 .leaderboard {
-  grid-area: leaderboard;
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-template-areas: "total teams";
@@ -68,14 +67,14 @@
   justify-content: space-between;
   height: 100%;
   padding: $padding;
-  font: $h3;
+  font: $h2;
 
   & + & {
     border-top: $border;
   }
 
   &:first-of-type {
-    font: $h2;
+    font-weight: 700;
   }
 }
 
