--- a/src/styles/components/_leaderboard.scss
+++ b/src/styles/components/_leaderboard.scss
@@ -106,3 +106,19 @@
     color: $light-text-color;
   }
 }
+
+.team-1{
+  color: $lb-blue;
+}
+
+.team-2 {
+  color: $lb-yellow;
+}
+
+.team-3 {
+  color: $lb-red;
+}
+
+.team-4 {
+  color: $lb-green;
+}
