--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -14,6 +14,7 @@ html {
   font-kerning: normal;
   font-feature-settings: "calt" 1, "tnum" 0, "frac" 1, "case" 1, "ss01" 1, "cv08" 1, "kern" 1, "liga" 1;
   color: $text-color;
+  background-color: $near-white;
 }
 
 body.show-grid {
