--- a/src/styles/components/_leaderboard.scss
+++ b/src/styles/components/_leaderboard.scss
@@ -36,7 +36,7 @@
   padding: $padding;
   font: $h2;
   text-align: center;
-  color: $lighter-gray;
+  color: #fff;
   background-color: $lb-blue;
 }
 
