--- a/src/styles/components/_leaderboard.scss
+++ b/src/styles/components/_leaderboard.scss
@@ -19,6 +19,15 @@
   }
 }
 
+@media screen and (max-width: 415px){
+
+  .leaderboard--teams {
+    grid-template-columns: auto;
+    grid-template-rows: auto auto;
+    grid-template-areas: "total" "teams";
+  }
+}
+
 
 // ---------------------------------- \\
 //              DISPLAY               \\
@@ -49,12 +58,22 @@
   padding: 5px;
   background-color: $lb-navy;
   border-radius: 15px;
+
+  @media screen and (max-width: 415px) {
+    height: 30px;
+    width: 100%;
+  }
 }
 
 .leaderboard__progress-bar-inner {
   height: 19%;
   background-color: $lb-yellow;
   border-radius: 10px;
+
+  @media screen and (max-width: 415px) {
+    width: 19%;
+    height: 100%;
+  }
 }
 
 .leaderboard__list {
@@ -82,6 +101,11 @@
   &--leader {
     font-weight: 700;
   }
+
+  @media screen and (max-width: 415px) {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 }
 
 .leaderboard__item-title-icon {
@@ -92,6 +116,10 @@
   display: grid;
   grid-auto-flow: column;
   grid-gap: $padding * 2;
+
+  @media screen and (max-width: 415px) {
+    width: 100%;
+  }
 }
 
 .leaderboard__item-stat {
@@ -99,6 +127,7 @@
   &--total-score {
     width: 3.5em;
     text-align: right;
+    justify-self: end;
   }
 
   &:not(.leaderboard__item-stat--total-score) {
