Responsive team leaderboard styles

--- a/src/styles/components/_leaderboard.scss
+++ b/src/styles/components/_leaderboard.scss
@@ -81,8 +81,11 @@
   grid-auto-rows: 1fr;
   border: $border;
 
-  .leaderboard--teams & {
-    border-left: none;
+  @media screen and (min-width: 415px) {
+
+    .leaderboard--teams & {
+      border-left: none;
+    }
   }
 }
 
