--- a/src/styles/components/_leaderboard.scss
+++ b/src/styles/components/_leaderboard.scss
@@ -7,7 +7,7 @@
 }
 
 .leaderboard--teams {
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 2.618fr;
   grid-template-areas: "total teams";
 
   .leaderboard__total {
@@ -103,7 +103,8 @@ $progress: 19%;
     border-top: $border;
   }
 
-  &--leader {
+  &--leader,
+  &:first-of-type {
     font-weight: 700;
   }
 
@@ -114,6 +115,13 @@ $progress: 19%;
 }
 
 .leaderboard__item-title {
+
+  .leaderboard__item:first-of-type &:before {
+    content: url("data:image/svg+xml;charset=UTF-8, <svg class='svg-inline--fa fa-crown fa-w-20 leaderboard__item-title-icon' aria-hidden='true' data-prefix='fas' data-icon='crown' role='img' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 640 512' data-fa-i2svg=''><path fill='gold' d='M528 448H112c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h416c8.8 0 16-7.2 16-16v-32c0-8.8-7.2-16-16-16zm64-320c-26.5 0-48 21.5-48 48 0 7.1 1.6 13.7 4.4 19.8L476 239.2c-15.4 9.2-35.3 4-44.2-11.6L350.3 85C361 76.2 368 63 368 48c0-26.5-21.5-48-48-48s-48 21.5-48 48c0 15 7 28.2 17.7 37l-81.5 142.6c-8.9 15.6-28.9 20.8-44.2 11.6l-72.3-43.4c2.7-6 4.4-12.7 4.4-19.8 0-26.5-21.5-48-48-48S0 149.5 0 176s21.5 48 48 48c2.6 0 5.2-.4 7.7-.8L128 416h384l72.3-192.8c2.5.4 5.1.8 7.7.8 26.5 0 48-21.5 48-48s-21.5-48-48-48z'></path></svg>");
+    width: 25px;
+    height: 20px;
+    display: inline-block;
+  }
 
   @media screen and (max-width: 415px) {
     max-width: calc(100% - 4em);
@@ -130,7 +138,8 @@ $progress: 19%;
 .leaderboard__item-stats {
   display: grid;
   grid-template-columns: repeat(3, auto) 1fr;
-  grid-gap: $padding * 2;
+  grid-gap: $padding / 2;
+  align-items: center;
 
   @media screen and (max-width: 415px) {
     width: 100%;
@@ -142,6 +151,7 @@ $progress: 19%;
   &--total-score {
     text-align: right;
     justify-self: end;
+    width: 3.25em;
     margin-left: $padding * 2;
 
     @media screen and (max-width: 415px) {
@@ -150,8 +160,32 @@ $progress: 19%;
   }
 
   &:not(.leaderboard__item-stat--total-score) {
-    font-size: 75%;
+    font-size: 1em;
     color: $light-text-color;
+  }
+
+  &.form-group {
+    margin-bottom: 0;
+  }
+
+  .form-group__input {
+    max-width: 4.5rem;
+    font-size: 1rem;
+    line-height: 1;
+    color: $light-text-color;
+    border-color: transparent;
+
+    [mv-mode="edit"] & {
+      border-color: $border-color;
+    }
+
+    &:hover {
+      border-color: lighten($color-secondary, 20%);
+    }
+
+    &:focus {
+      border-color: $color-secondary;
+    }
   }
 }
 
