--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -66,9 +66,10 @@ $quarter-padding: $half-padding / 2;
 
 $border-width: 2px;
 $border-style: solid;
+$border-color: $gray;
 
 $dark-border: $border-width $border-style $dark-gray;
-$border: $border-width $border-style $gray;
+$border: $border-width $border-style $border-color;
 $light-border: $border-width $border-style $light-gray;
 $border-radius: 4px;
 
