--- a/src/styles/components/_tooltip.scss
+++ b/src/styles/components/_tooltip.scss
@@ -12,7 +12,7 @@
     line-height: 1;
     white-space: nowrap;
     color: #fff;
-    padding: ($quarter-padding * 0.25) $quarter-padding ($quarter-padding * 0.75);
+    padding: $half-padding;
     background-color: $black;
     border-radius: $border-radius;
     transform: translate(-50%, -100%);
