--- a/src/styles/components/_leaderboard.scss
+++ b/src/styles/components/_leaderboard.scss
@@ -42,6 +42,10 @@
 }
 
 .leaderboard__total {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   padding: $padding;
   font: $h2;
   text-align: center;
@@ -49,32 +53,28 @@
   background-color: $lb-blue;
 }
 
-.leaderboard__progress-bar {
-  display: grid;
-  align-items: end;
-  width: 30px;
-  height: 400px;
-  margin: $padding auto;
+progress {
+  width: 100%;
+  height: 30px;
   padding: 5px;
   background-color: $lb-navy;
   border-radius: 15px;
 
-  @media screen and (max-width: 786px) {
-    height: 30px;
-    width: 100%;
+  @media screen and (min-width: 786px) {
+    position: absolute;
+    top: 50%;
+    left:50%;
+    width: 300px;
+    transform: translate(-50%, -50%) rotate(-90deg);
   }
-}
 
-$progress: 19%;
+  &::-webkit-progress-bar {
+    background-color: transparent;
+  }
 
-.leaderboard__progress-bar-inner {
-  height: $progress;
-  background-color: $lb-yellow;
-  border-radius: 10px;
-
-  @media screen and (max-width: 786px) {
-    width: $progress;
-    height: 100%;
+  &::-webkit-progress-value {
+    background-color: $lb-yellow;
+    border-radius: 10px;
   }
 }
 
