--- a/src/styles/base/_button.scss
+++ b/src/styles/base/_button.scss
@@ -191,25 +191,32 @@ $small-button-height: $button-height * 0.75;
   margin-left: $half-padding;
 }
 
-// [mv-app].mv-unsaved-changes .mv-save {
-//   transform: scale(1.5);
-// }
-
 .button--ui-control {
   display: none;
+  position: fixed !important;
+  bottom: 50px;
+  right: 50px;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  box-shadow: $soft-box-shadow;
+  z-index: 100;
+
+  [class*="fa"] {
+    margin-bottom: $padding / 3;
+    font-size: 125%;
+  }
 
   [mv-permissions*="edit"] & {
     display: block;
-    position: fixed !important;
-    bottom: 50px;
-    right: 50px;
-    width: 4rem;
-    height: 4rem;
-    font-size: 125%;
-    border-radius: 50%;
-    box-shadow: $soft-box-shadow;
-    z-index: 100;
   }
+}
+
+[mv-app].mv-unsaved-changes .mv-save {
+  color: #fff;
+  background-color: $color-secondary;
+  border-color: $color-primary;
+  box-shadow: $dark-box-shadow, 0 0 0 $border-width #fff inset;
 }
 
 .mv-add-leaderboardTeamItem {
